--- a/WebFundementals + Git/fakeBlog.html
+++ b/WebFundementals + Git/fakeBlog.html
@@ -60,6 +60,7 @@
             </tr>
         </tbody>
     </table>
+	<h3>Credit Card</h3>
     <ul>
         <li>4716 3786 4203 4299</li>
         <li>10/2018</li>
@@ -67,7 +68,7 @@
     </ul>
     <a href="http://www.fakenamegenerator.com/">Fakenamegenerator.com</a>
     <hr />
-    <div style="background:lightgrey">
+    <div>
 
         <h2>Survey</h2>
         <form>
