--- a/WebFundementals/CSS/yellowBelt/index.html
+++ b/WebFundementals/CSS/yellowBelt/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Accordance 10</title>
+<link rel="shortcut icon" type="image/png" href="img/menu_icon1.png"/>
 </head>
 
 <body>
