--- a/WebFundementals/jQuery/Arena/index.html
+++ b/WebFundementals/jQuery/Arena/index.html
@@ -1,10 +1,10 @@
-<!<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>DOJO</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" type="text/css" href="buttons.css">
 </head>
